--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/Avatar.png" alt="Foto de perfil Willian Rodrigues" />
+        <img src="./assets/AvatarEscuro.png" alt="Foto de perfil Willian Rodrigues" />
         <p id="user">Willian Rodrigues | Dev</p>
       </div>
       <div id="switch" onclick="toggleMode()">
@@ -26,18 +26,24 @@
       <div id="list">
         <ul>
           <li>
-            <a href="#">Meus projetos</a>
+            <a href="https://github.com/WillianRodriguesz">Meus projetos</a>
           </li>
           <li>
-            <a href="#">LinkedIn</a>
+            <a
+              href="https://www.linkedin.com/in/willian-rodrigues-260913239/"
+              target="_blank"
+              >LinkedIn</a
+            >
           </li>
           <li>
-            <a href="https://github.com/WillianRodriguesz" target="_blank"
+            <a href="#" target="_blank"
               >Portfolio</a
             >
           </li>
           <li>
-            <a href="#">Instagram</a>
+            <a href="https://www.instagram.com/williamrdrigues/" target="_blank"
+              >Instagram</a
+            >
           </li>
         </ul>
       </div>
@@ -45,13 +51,16 @@
         <a href="https://github.com/WillianRodriguesz" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/williamrdrigues/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
         <a href="#" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/willian-rodrigues-260913239/"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
