--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/AvatarEscuro.png" alt="Foto de perfil Willian Rodrigues" />
+        <img
+          src="./assets/AvatarEscuro.png"
+          alt="Foto de perfil Willian Rodrigues"
+        />
         <p id="user">Willian Rodrigues | Dev</p>
       </div>
       <div id="switch" onclick="toggleMode()">
@@ -36,9 +39,7 @@
             >
           </li>
           <li>
-            <a href="#" target="_blank"
-              >Portfolio</a
-            >
+            <a href="#" target="_blank">Portfolio</a>
           </li>
           <li>
             <a href="https://www.instagram.com/williamrdrigues/" target="_blank"
